Closed Bug 129539 Opened 22 years ago Closed 22 years ago

unescaping regression from fix for bug 124042

Categories

(MailNews Core :: Backend, defect, P1)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: darin.moz, Assigned: darin.moz)

References

Details

Attachments

(1 file)

nsMsgMailNewsUrl::GetServer() calls nsIURI::GetUsername() expecting an unescaped
username string, but GetUsername() now returns the escaped string since it
cannot guarantee the charset of the unescaped string.  I unfortunately missed
this change when generating the patch for bug 124042 :-(
-> critical since this probably causes problems for i18n users.
Severity: normal → critical
Status: NEW → ASSIGNED
Keywords: nsbeta1
Priority: -- → P1
Target Milestone: --- → mozilla1.0
Attached patch v1 patchSplinter Review
simple patch
scott, seth: can i get some r/sr= lovin from you guys?
Comment on attachment 73020 [details] [diff] [review]
v1 patch

sr=mscott
Attachment #73020 - Flags: superreview+
Comment on attachment 73020 [details] [diff] [review]
v1 patch

r=sspitzer

but heads up, I think all this code ties in to allowing "@" in the username. 
have you pop / imap tested accounts like that?
Attachment #73020 - Flags: review+
Comment on attachment 73020 [details] [diff] [review]
v1 patch

a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #73020 - Flags: approval+
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
*** Bug 129457 has been marked as a duplicate of this bug. ***
Can you give us some steps to test this.
Darin, could you answer Esther's question? Thanks.
i'll only noticed this problem while reading through the code.  i'm not sure
exactly how this bug might have manifested itself... there is of course the
duplicate bug 129457... you might try verifying that that bug is fixed.

that said, this bug was very cut-and-dry.  i simply forgot an obvious step.
verified based on the dup bug comments 10 & 16 that verify it was fixed.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: