b=129539 "unescaping regression from fix for bug 124042" r/sr=sspitzer,mscott a=asa